Adding 'auth' capability to Swagger UI requests
